[package]
name = "emergency-withdraw"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["0xHumban <0xhumban@proton.me>"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
crossterm = "0.27.0"
dotenv = "0.15.0"
ethers = "2.0.14"
eyre = "0.6.12"
ratatui = "0.26.2"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.1.11"
